add mobile navigation with styling

--- a/src/scss/global/_reset.scss
+++ b/src/scss/global/_reset.scss
@@ -7,3 +7,12 @@
   list-style-type: none;
   text-decoration: none;
 }
+
+button {
+  border: none;
+  background-color: transparent;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
