--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,1 +1,34 @@
-<header>Header</header>
+<header class="header">
+  <div class="header__content">
+    <a href="./index.html"
+      ><img src="../images/shared/logo.svg" class="header__logo" alt="Logo"
+    /></a>
+    <button class="header__hamburger">
+      <img
+        src="../images/shared/icon-hamburger.svg"
+        class="header__hamburgerIcon"
+        alt="Hamburger Menu Icon"
+      />
+    </button>
+    <nav class="nav">
+      <ul>
+        <li>
+          <a href="#"><span class="nav__num">00</span> Home</a>
+        </li>
+        <li>
+          <a href="./destination.html"
+            ><span class="nav__num">01</span> Destination</a
+          >
+        </li>
+        <li>
+          <a href="./crew.html"><span class="nav__num">02</span> Crew</a>
+        </li>
+        <li>
+          <a href="./technology.html"
+            ><span class="nav__num">03</span> Technology</a
+          >
+        </li>
+      </ul>
+    </nav>
+  </div>
+</header>
