--- a/src/scss/global/_variables.scss
+++ b/src/scss/global/_variables.scss
@@ -1,3 +1,6 @@
 $barlow: "Barlow", sans-serif;
 $barlow-condensed: "Barlow Condensed", sans-serif;
 $bellefailr: "Bellefair", serif;
+
+$m: 768px;
+$l: 1440px;
