--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -31,4 +31,51 @@
       }
     }
   }
+
+  @include breakpoint($m) {
+    position: unset;
+    width: unset;
+    transform: translateX(10%);
+
+    ul {
+      padding: 0 2rem;
+      height: 100%;
+      margin: unset;
+      display: flex;
+      align-items: center;
+      li {
+        margin: 0 16px;
+        height: 100%;
+        position: relative;
+        display: flex;
+        align-items: center;
+        &:not(:first-of-type) {
+          margin-top: unset;
+        }
+
+        &:hover {
+          cursor: pointer;
+        }
+
+        &:hover > a::after {
+          content: "";
+          height: 3px;
+          width: 100%;
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          background-color: white;
+        }
+
+        a {
+          font-size: 0.875rem;
+        }
+
+        span {
+          display: none;
+        }
+      }
+    }
+  }
 }
