--- a/src/scss/global/_placeholders.scss
+++ b/src/scss/global/_placeholders.scss
@@ -7,6 +7,12 @@
   display: flex;
 }
 
+%flex-center {
+  @extend %flex;
+  justify-content: center;
+  align-items: center;
+}
+
 %flex-between {
   @extend %flex;
   justify-content: space-between;
