header styling finished

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -12,18 +12,18 @@
     </button>
     <nav class="nav">
       <ul>
-        <li>
-          <a href="#"><span class="nav__num">00</span> Home</a>
+        <li class="navitem home">
+          <a href="./index.html"><span class="nav__num">00</span> Home</a>
         </li>
-        <li>
+        <li class="navitem destination">
           <a href="./destination.html"
             ><span class="nav__num">01</span> Destination</a
           >
         </li>
-        <li>
+        <li class="navitem crew">
           <a href="./crew.html"><span class="nav__num">02</span> Crew</a>
         </li>
-        <li>
+        <li class="navitem technology">
           <a href="./technology.html"
             ><span class="nav__num">03</span> Technology</a
           >
