--- a/src/scss/global/_variables.scss
+++ b/src/scss/global/_variables.scss
@@ -1,6 +1,10 @@
 $barlow: "Barlow", sans-serif;
 $barlow-condensed: "Barlow Condensed", sans-serif;
-$bellefailr: "Bellefair", serif;
+$bellefair: "Bellefair", serif;
 
 $m: 768px;
 $l: 1440px;
+
+$white: #ffffff;
+$purple: #d0d6f9;
+$dark-font: #0b0d17;
