--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,7 +1,50 @@
 .homepage {
   width: 100%;
   height: 100vh;
+  min-height: 650px;
+  @extend %flex-center;
+  flex-direction: column;
+  text-align: center;
   background-image: url("../images/home/background-home-mobile.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+
+  &__content {
+    margin-top: 4rem;
+    @extend %content-width;
+  }
+
+  &__title {
+    font-family: $barlow-condensed;
+    font-size: 1rem;
+    font-weight: 400;
+    color: $purple;
+    letter-spacing: 2.7px;
+    text-transform: uppercase;
+
+    &--large {
+      display: block;
+      margin-top: 1rem;
+      font-family: $bellefair;
+      font-size: 5rem;
+      color: $white;
+    }
+  }
+
+  &__text {
+    margin-top: 1rem;
+    color: $purple;
+  }
+
+  &__btn {
+    margin-top: 5rem;
+    width: 150px;
+    aspect-ratio: 1 / 1;
+    border-radius: 100%;
+    background-color: $white;
+    font-family: $bellefair;
+    font-size: 1.25rem;
+    text-transform: uppercase;
+    color: $dark-font;
+  }
 }
