--- a/src/scss/global/_basics.scss
+++ b/src/scss/global/_basics.scss
@@ -14,6 +14,10 @@ p {
   line-height: 25px;
 
   @include breakpoint($m) {
-    line-height: 28px;
+    line-height: 1.75rem;
+  }
+
+  @include breakpoint($l) {
+    line-height: 2rem;
   }
 }
