--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -7,6 +7,7 @@
   background-color: rgba(white, 4%);
   backdrop-filter: blur(80px);
   transition: right 0.4s ease-in-out;
+  z-index: 10;
 
   &--open {
     right: 0;
