--- a/src/scss/global/_basics.scss
+++ b/src/scss/global/_basics.scss
@@ -2,11 +2,12 @@ body {
   font-size: 16px;
   font-family: $barlow;
   color: $white;
+  position: relative;
+  overflow-x: hidden;
 }
 
 main {
   width: 100%;
-  height: 100vh;
 }
 
 p {
