--- a/src/scss/pages/_destpage.scss
+++ b/src/scss/pages/_destpage.scss
@@ -1,10 +1,11 @@
-#destination {
+.destination-bg {
   width: 100%;
   height: 100vh;
   background-image: url("../images/destination/background-destination-mobile.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   position: fixed;
+  z-index: -1;
 
   @include breakpoint($m) {
     background-image: url("../images/destination/background-destination-tablet.jpg");
@@ -17,14 +18,12 @@
 
 .destpage {
   text-align: center;
-  overflow-y: scroll;
 
   &__content {
     @extend %content-width;
   }
 
   &__title {
-    margin-top: 5.5rem;
     @extend %title-barlow-cond;
     font-size: 1rem;
     letter-spacing: 2.7px;
@@ -44,7 +43,7 @@
   }
 
   &__img {
-    width: 170px;
+    height: 100%;
     aspect-ratio: 1 / 1;
     position: absolute;
     opacity: 0;
@@ -89,7 +88,8 @@
   }
 
   &__text {
-    margin-top: 1.5rem;
+    margin: 1.5rem auto 0 auto;
+    max-width: 570px;
 
     h2 {
       @extend %title-bellefair;
@@ -124,6 +124,92 @@
       margin-top: 0.75rem;
       @extend %title-bellefair;
       font-size: 1.75rem;
+    }
+  }
+
+  @include breakpoint($m) {
+    &__title {
+      margin-top: 8.5rem;
+      text-align: left;
+      font-size: 1.25rem;
+      letter-spacing: 3.38px;
+    }
+
+    &__imgContainer {
+      margin-top: 3.75rem;
+      height: 300px;
+    }
+
+    &__btnContainer {
+      margin-top: 3.313rem;
+    }
+
+    &__btn {
+      font-size: 1rem;
+      letter-spacing: 2.7px;
+    }
+
+    &__text {
+      margin-top: 2rem;
+
+      h2 {
+        font-size: 5rem;
+      }
+    }
+
+    &__divider {
+      margin-top: 3.063rem;
+    }
+  }
+
+  @include breakpoint($l) {
+    &__title {
+      margin: 4.75rem 0 0 6.5rem;
+      font-size: 1.75rem;
+      letter-spacing: 4.72px;
+    }
+
+    &__flex {
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+    }
+
+    &__imgContainer {
+      height: 445px;
+      width: 445px;
+    }
+
+    &__btnText {
+      width: 445px;
+      text-align: left;
+    }
+
+    &__text {
+      h2 {
+        font-size: 6.25rem;
+      }
+
+      p {
+        font-size: 1.125rem;
+      }
+    }
+
+    &__statsContainer {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+    }
+
+    &__stat {
+      margin-top: 1.75rem;
+      &:last-of-type {
+        margin-left: 4.938rem;
+      }
+    }
+
+    &__divider {
+      margin-top: 3.375rem;
     }
   }
 }
