--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,15 +1,27 @@
-.homepage {
+.home-bg {
   width: 100%;
   height: 100vh;
-  min-height: 650px;
-  @extend %flex-center;
-  text-align: center;
   background-image: url("../images/home/background-home-mobile.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  position: fixed;
+  z-index: -1;
+
+  @include breakpoint($m) {
+    background-image: url("../images/home/background-home-tablet.jpg");
+  }
+
+  @include breakpoint($l) {
+    background-image: url("../images/home/background-home-desktop.jpg");
+  }
+}
+
+.homepage {
+  @extend %flex-center;
+  text-align: center;
 
   &__content {
-    margin-top: 4rem;
+    margin-top: 1.5rem;
     @extend %content-width;
     @extend %flex-center;
     flex-direction: column;
@@ -52,8 +64,10 @@
   }
 
   @include breakpoint($m) {
-    background-image: url("../images/home/background-home-tablet.jpg");
-    min-height: 1000px;
+    &__content {
+      margin-top: 6.625rem;
+      padding-bottom: 5.625rem;
+    }
 
     &__title {
       font-size: 1.25rem;
@@ -73,12 +87,10 @@
   }
 
   @include breakpoint($l) {
-    background-image: url("../images/home/background-home-desktop.jpg");
     text-align: left;
-    min-height: 720px;
 
     &__content {
-      margin-top: 15rem;
+      margin-top: 14rem;
       flex-direction: row;
       justify-content: space-around;
     }
