--- a/src/scss/pages/_destpage.scss
+++ b/src/scss/pages/_destpage.scss
@@ -24,15 +24,7 @@
   }
 
   &__title {
-    @extend %title-barlow-cond;
-    font-size: 1rem;
-    letter-spacing: 2.7px;
-
-    span {
-      margin-right: 1rem;
-      color: rgba($white, 25%);
-      font-weight: 700;
-    }
+    @extend %page-breadcrumb;
   }
 
   &__imgContainer {
