--- a/src/scss/pages/_crew.scss
+++ b/src/scss/pages/_crew.scss
@@ -1,4 +1,6 @@
 .crewpage {
+  text-align: center;
+
   &__bg {
     width: 100%;
     height: 100vh;
@@ -15,6 +17,71 @@
 
   &__title {
     @extend %page-breadcrumb;
+  }
+
+  &__imgContainer {
+    margin-top: 2rem;
+    position: relative;
+    height: 223px;
+
+    &::after {
+      content: "";
+      width: 100%;
+      height: 1px;
+      background-color: lighten($dark-element, 10%);
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+    }
+  }
+
+  &__img {
+    margin: 0 auto;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    right: 0;
+    opacity: 0;
+
+    &--show {
+      opacity: 1;
+    }
+  }
+
+  &__textContainer {
+    margin-top: 2rem;
+  }
+
+  &__btn {
+    margin: 0 0.5rem;
+    width: 0.625rem;
+    aspect-ratio: 1 / 1;
+    background-color: $white;
+    border-radius: 100%;
+    opacity: 18%;
+
+    &--active {
+      opacity: 1;
+    }
+  }
+
+  &__h3 {
+    margin-top: 2rem;
+    @extend %title-bellefair;
+    font-size: 1rem;
+    opacity: 50%;
+  }
+
+  &__h2 {
+    margin-top: 0.5rem;
+    @extend %title-bellefair;
+    font-size: 1.5rem;
+  }
+
+  &__p {
+    margin-top: 1rem;
+    color: $purple;
   }
 
   @include breakpoint($m) {
