--- a/src/scss/pages/_technology.scss
+++ b/src/scss/pages/_technology.scss
@@ -1,4 +1,6 @@
 .tecpage {
+  text-align: center;
+
   &__bg {
     width: 100%;
     height: 100vh;
@@ -17,6 +19,72 @@
     @extend %page-breadcrumb;
   }
 
+  &__imgContainer {
+    margin-top: 2rem;
+    display: grid;
+
+    picture {
+      grid-area: 1 / 1 / 1 / 1;
+    }
+  }
+
+  &__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0;
+
+    &--show {
+      opacity: 1;
+    }
+  }
+
+  &__nav {
+    margin-top: 2.125rem;
+  }
+
+  &__btn {
+    margin: 0 0.5rem;
+    width: 40px;
+    aspect-ratio: 1 / 1;
+    background-color: transparent;
+    border: 1px solid $white;
+    border-radius: 100%;
+    color: $white;
+    font-family: $bellefair;
+    font-size: 1rem;
+
+    &[data-active="true"],
+    &:hover {
+      background-color: $white;
+      color: $dark-font;
+    }
+  }
+
+  &__textContainer {
+    margin: 1.5rem auto 0 auto;
+    padding-bottom: 5rem;
+    max-width: 458px;
+  }
+
+  &__h3 {
+    @extend %title-barlow-cond;
+    letter-spacing: 2.4px;
+    font-size: 0.875rem;
+    color: $purple;
+  }
+
+  &__h2 {
+    margin-top: 0.5rem;
+    @extend %title-bellefair;
+  }
+
+  &__p {
+    margin-top: 1rem;
+    font-size: 0.938rem;
+    color: $purple;
+  }
+
   @include breakpoint($m) {
     &__bg {
       background-image: url("../images/technology/background-technology-tablet.jpg");
@@ -27,6 +95,36 @@
       text-align: left;
       font-size: 1.25rem;
       letter-spacing: 3.38px;
+    }
+
+    &__imgContainer {
+      margin-top: 3.75rem;
+    }
+
+    &__nav {
+      margin-top: 3.5rem;
+    }
+
+    &__btn {
+      width: 60px;
+      font-size: 1.5rem;
+    }
+
+    &__textContainer {
+      margin-top: 2.75rem;
+    }
+
+    &__h3 {
+      font-size: 1rem;
+    }
+
+    &__h2 {
+      margin-top: 1rem;
+      font-size: 2.5rem;
+    }
+
+    &__p {
+      font-size: 1rem;
     }
   }
 
