--- a/src/scss/pages/_technology.scss
+++ b/src/scss/pages/_technology.scss
@@ -129,6 +129,7 @@
   }
 
   @include breakpoint($l) {
+    text-align: left;
     &__bg {
       background-image: url("../images/technology/background-technology-desktop.jpg");
     }
@@ -137,6 +138,52 @@
       margin: 4.75rem 0 0 6.5rem;
       font-size: 1.75rem;
       letter-spacing: 4.72px;
+    }
+
+    &__container {
+      display: flex;
+    }
+
+    &__imgContainer {
+      margin-top: 1.625rem;
+      order: 2;
+    }
+
+    &__img {
+      width: 515px;
+    }
+
+    &__flex {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    &__nav {
+      margin-top: unset;
+      display: flex;
+      flex-direction: column;
+    }
+
+    &__btn {
+      width: 80px;
+      margin: 1rem 0;
+    }
+
+    &__textContainer {
+      margin: 0 0 0 5rem;
+      padding-bottom: unset;
+      width: 50%;
+      max-width: 470px;
+    }
+
+    &__h2 {
+      margin-top: 0.5rem;
+      font-size: 3.5rem;
+    }
+
+    &__p {
+      font-size: 1.125rem;
     }
   }
 }
