fix destination page and change nav active

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -11,19 +11,19 @@
       />
     </button>
     <nav class="nav">
-      <ul>
-        <li class="navitem home">
+      <ul class="nav__ul">
+        <li class="navitem home" data-active="false">
           <a href="./index.html"><span class="nav__num">00</span> Home</a>
         </li>
-        <li class="navitem destination">
+        <li class="navitem destination" data-active="false">
           <a href="./destination.html"
             ><span class="nav__num">01</span> Destination</a
           >
         </li>
-        <li class="navitem crew">
+        <li class="navitem crew" data-active="false">
           <a href="./crew.html"><span class="nav__num">02</span> Crew</a>
         </li>
-        <li class="navitem technology">
+        <li class="navitem technology" data-active="false">
           <a href="./technology.html"
             ><span class="nav__num">03</span> Technology</a
           >
