--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -83,6 +83,11 @@
       width: 242px;
       font-size: 2rem;
       letter-spacing: 2px;
+      transition: box-shadow 0.5s ease-in-out;
+
+      &:hover {
+        box-shadow: 0px 0px 0px 88px rgba($white, 0.11);
+      }
     }
   }
 
