--- a/src/scss/pages/_technology.scss
+++ b/src/scss/pages/_technology.scss
@@ -33,6 +33,7 @@
     height: 100%;
     object-fit: cover;
     opacity: 0;
+    transition: opacity 0.7s ease-in-out;
 
     &[data-img="show"] {
       opacity: 1;
