add animation on crewpage

--- a/src/scss/global/_basics.scss
+++ b/src/scss/global/_basics.scss
@@ -21,3 +21,24 @@ p {
     line-height: 2rem;
   }
 }
+
+@keyframes fadeinleft {
+  from {
+    opacity: 0;
+    transform: translateX(-20%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+@keyframes fadeinright {
+  from {
+    opacity: 0;
+    transform: translateX(20%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
